# pre-commit-rs

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  test-config.yaml
.github/actions/setup-pre-commit/: README.md  TODO.md  action.yml
.github/workflows/: ci.yml  example-usage.yml  release.yml  test.yml
crates/: CLAUDE.md
crates/ci/: CLAUDE.md  Cargo.toml
crates/ci/src/: main.rs
crates/cli/: CLAUDE.md  Cargo.toml
crates/cli/src/: main.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: lib.rs
crates/dag/: CLAUDE.md  Cargo.toml
crates/dag/src/: lib.rs
crates/executor-parallel/: CLAUDE.md  Cargo.toml
crates/executor-parallel/src/: lib.rs
crates/executor-sync/: CLAUDE.md  Cargo.toml
crates/executor-sync/src/: lib.rs
crates/parser/: CLAUDE.md  Cargo.toml
crates/parser/src/: lib.rs
