[workspace]
members = [
    "crates/core",
    "crates/parser",
    "crates/dag",
    "crates/executor-sync",
    "crates/executor-parallel",
    "crates/cli",
    "crates/ci",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrew Gazelka"]
repository = "https://github.com/andrewgazelka/pre-commit-rs"

[workspace.dependencies]
# Internal crates
pre-commit-core = { path = "crates/core" }
pre-commit-parser = { path = "crates/parser" }
pre-commit-dag = { path = "crates/dag" }
pre-commit-executor-sync = { path = "crates/executor-sync" }
pre-commit-executor-parallel = { path = "crates/executor-parallel" }

# External dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
petgraph = "0.6"
regex = "1.11"
glob = "0.3"
owo-colors = "4.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
