[package]
name = "pre-commit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "pre-commit-rs"
path = "src/main.rs"

[dependencies]
pre-commit-core = { workspace = true }
pre-commit-parser = { workspace = true }
pre-commit-dag = { workspace = true }
pre-commit-executor-sync = { workspace = true }
pre-commit-executor-parallel = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
