[package]
name = "pre-commit-executor-parallel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pre-commit-core = { workspace = true }
pre-commit-dag = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
futures = "0.3"

[dev-dependencies]
